# android_jni_call_static_library

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/jin/com/ndkcamera/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Logger.hpp  native-lib.cpp
app/src/main/java/android/serialport/api/: SerialUtils.java
app/src/main/java/jin/com/ndkcamera/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/jin/com/ndkcamera/: ExampleUnitTest.java
logg/: build.gradle
logg/src/androidTest/java/jin/com/logg/: ExampleInstrumentedTest.java
logg/src/main/: AndroidManifest.xml
logg/src/main/java/jin/com/logg/: MainActivity.java
logg/src/main/res/layout/: activity_main.xml
logg/src/test/java/jin/com/logg/: ExampleUnitTest.java
